apps/storage-system/longhorn/config/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  labels:
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/component: httproute
    app.kubernetes.io/part-of: longhorn
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: envoy-admin
      namespace: network-system
      sectionName: https
  hostnames:
    - longhorn.admin.reli.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
